--- a/templates/countries.html
+++ b/templates/countries.html
@@ -7,10 +7,11 @@
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
     <script src="../static/countries.js" defer></script>
     <link rel="stylesheet" href="../static/countries.css">
+    <link rel="stylesheet" href="../static/index.css">
     <title>Countries</title>
 </head>
 <body>
-    <img src="../static/images/logo%20ho.webp" class="small-logo">
+    <img src="../static/images/logo%20ho.webp" class="logo">
     <div id="map" class="map"></div>
 </body>
 <script>
