--- a/templates/gameOver.html
+++ b/templates/gameOver.html
@@ -12,11 +12,11 @@
     <img src="../static/images/logo%20ho.webp" class="logo">
     <div class="popup-container">
         <h2 class="title bordeaux">GAME OVER!</h2>
-        <p class="text">Sorry Agent {{name}}, you did not catch the criminal this time.<br>
+        <p class="text medium">Sorry Agent {{name}}, you did not catch the criminal this time.<br>
             Try again.
         </p>
-        <div class="popup-inside-container">
-            <div class="container badge-container">
+        <div class="flex-container-center popup-inside-container">
+            <div class="flex-container-center container badge-container">
                 <img src="../static/images/badge%20icon.webp" class="badge-image">
                 <div class="text-badge">
                     <p>Agent: {{name}}</p>
@@ -32,7 +32,7 @@
     </div>
 
    <form action="#" >
-       <input class="button" type="button" value="PLAY AGAIN" onclick="nextMission()">
+       <input class="flex-container-center button" type="button" value="PLAY AGAIN" onclick="nextMission()">
    </form>
 </body>
 </html>
