--- a/templates/howto.html
+++ b/templates/howto.html
@@ -5,34 +5,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../static/index.css">
     <link rel="stylesheet" href="../static/countries.css">
+    <link rel="stylesheet" href="../static/howto.css">
     <title>R-code Project</title>
 </head>
 <body>
     <img src="../static/images/logo%20ho.webp" class="logo">
-    <div class="howto-div">
-        <h1 class="howto-h1">HOW TO PLAY</h1>
+    <div class="flex-container-center popup-container">
+        <h1 class="title bordeaux">HOW TO PLAY</h1>
         <div class="howto-inner-div">
-            <p class="howto-p">When the game starts, you will receive a ‘’Mission File’’, which can be opened by clicking on the file cover.</p>
-            <div class="howto-p">
+            <p class="howto-p text small">When the game starts, you will receive a ‘’Mission File’’, which can be opened by clicking on the file cover.</p>
+            <div class="howto-p text small">
                 <p>Open the ‘’Mission File’’ and you will see your tasks and task clues. Enter your answers into the answer box according to the clues and click ‘’Send’’. You will be given multiple missions until you successfully find where the criminal is.</p>
                 <img src="../static/images/enter-answer.png" alt="enter answer image">
             </div>
-            <div class="howto-p">
+            <div class="howto-p text small">
                 <p>You will see your current location and your name and ID in the upper right corner of the mission page. In the lower right corner you will see the status of the criminal's release of Ricina.</p>
                 <img src="../static/images/dashboard.png" alt="dashboard image">
                 <img src="../static/images/Ricina-dashboard.png" alt="ricina dashboard image">
             </div>
-            <div class="howto-p">
+            <div class="howto-p text small">
             <p>During the game, you can always check "How to Play" on the lower right to help you with the game.</p>
             <img src="../static/images/Howtobutton.png" alt="how to play button image">
             </div>
-            <div class="howto-p">
+            <div class="howto-p text small">
                 <p>Button of "Show All Countries" on the lower right can help you narrow down your answers.</p>
                 <img src="../static/images/show-all-countries.png" alt="how to play button image">
             </div>
-            <p class="howto-p">Of course, you have the right to exit the task at any time, and the button of <span style="color: red; font-weight: bold">Exit</span> on the lower right can help you. But we hope you can persist to the end, catch the criminals and stop the spread of Ricina.GOOD LUCK!!</p>
+            <p class="howto-p text small">Of course, you have the right to exit the task at any time, and the button of <span style="color: red; font-weight: bold">Exit</span> on the lower right can help you. But we hope you can persist to the end, catch the criminals and stop the spread of Ricina.GOOD LUCK!!</p>
         </div>
     </div>
-    <button type="submit" class="button">OK</button>
+    <button type="submit" class="flex-container-center button">OK</button>
 </body>
 </html>
