--- a/templates/mission-file.html
+++ b/templates/mission-file.html
@@ -1,19 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="../static/mission-file.css">
+    <link rel="stylesheet" type="text/css" href="../static/index.css">
     <script src="../static/countries.js" defer></script>
     <link rel="stylesheet" href="../static/index.css">
-    <link rel="stylesheet" type="text/css" href="../static/index.css">
-    <link rel="stylesheet" type="text/css" href="../static/mission-file.css">
-    <title>R-Code Project Game</title>
+    <title>R-Code Project</title>
+    <meta charset="UTF-8">
 </head>
 <body>
     <img src="../static/images/logo ho.webp" class="logo logo-countries">
-    <div class="mission-file">
-        <img id="file-nor" src="/static/images/file.webp" alt="mission file">
-    </div>
+    <img class="mission-file" id="file-nor" src="/static/images/file.webp" alt="mission file">
 </body>
 <script>
     let file= document.getElementById("file-nor");
