--- a/templates/start.html
+++ b/templates/start.html
@@ -1,20 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@300&family=Life+Savers:wght@400;700&family=Maitree:wght@300&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@300&family=Life+Savers:wght@400;700&family=Maitree:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../static/start.css">
     <link rel="stylesheet" href="../static/index.css">
     <title>R-code Project</title>
+    <meta charset="UTF-8">
 </head>
 
-<body>
-    <div class="start-div">
+<body class="start-div">
         <img class="big-logo" src="/static/images/logo%20ver%20wh.webp" alt="Logo">
         <button class="button">START</button>
-    </div>
 </body>
 </html>
