--- a/static/index.css
+++ b/static/index.css
@@ -4,6 +4,10 @@
     --green:#2D5951;
     --red: #F23558;
     --font: 'IBM Plex Mono', monospace;
+    --small-text: 20px;
+    --medium-text: 25px;
+    --big-text: 50px;
+    --border: 20px;
 }
 
 * {
@@ -46,29 +50,39 @@ body{
     text-align: center;
     font-weight: bold;
     padding: 10px;
-    font-size: 50px;
+    font-size: var(--big-text);
 }
 
 .button {
-    margin: 0 auto;
-    align-self: center;
-    border: none;
-    border-radius: 20px;
-    width: 18rem;
     height: 4rem;
-    font-size:1.5rem;
-    font-weight: bold;
+    border: none;
+    margin: 0 auto;
+    width: 18rem;
+    flex-wrap: wrap;
     cursor: pointer;
+    font-weight: bold;
+    align-self: center;
+    color: var(--white);
     letter-spacing: 1px;
     transition: all 0.25s;
+    border-radius: var(--border);
+    font-size: var(--medium-text);
     background-color: var(--bordeaux);
-    color: var(--white);
 }
 
 .text{
-    text-align: center;
     padding: 2rem;
-    font-size: 1.8rem;
+    text-align: center;
+}
+
+.small{
+    font-size: var(--small-text);
+}
+.medium{
+    font-size: var(--medium-text);
+}
+.big{
+    font-size: var(--big-text);
 }
 
 .button:hover {
@@ -77,16 +91,16 @@ body{
 }
 
 .exit-button {
-    display: inline-block;
     width: 20rem;
     height: 3rem;
     margin: 1rem;
+    cursor: pointer;
     font-size: 16px;
     border-width:1px;
-    border-radius: 20px;
-    cursor: pointer;
-    background-color: var(--white);
     font-weight: bolder;
+    border-radius: 20px;
+    display: inline-block;
+    background-color: var(--white);
 }
 
 .exit-button:hover{
@@ -103,8 +117,8 @@ body{
 }
 
 .exit-bordeaux-border{
-    border-color: var(--bordeaux);
     color: var(--bordeaux);
+    border-color: var(--bordeaux);
 }
 
 .exit-bordeaux-border:hover{
@@ -113,13 +127,13 @@ body{
 
 
 .popup-container{
-    flex-direction: column;
-    margin: auto;
-    background-color: var(--white);
-    border-radius: 20px;
-    height: 60vh;
     width: 80%;
+    margin: auto;
+    height: 60vh;
+    border-radius: 20px;
     margin-bottom: 2rem;
+    flex-direction: column;
+    background-color: var(--white);
 }
 
 .ricina-img{
@@ -144,10 +158,6 @@ body{
 }
 
 .container{
-    display: flex;
-    align-self: center;
-    align-content: center;
-    justify-content: center;
     background-color: var(--bordeaux);
     color: var(--white);
     border-radius: 30px;
@@ -167,6 +177,7 @@ body{
 }
 
 .container-location{
+    display: flex;
     flex-direction: column;
     text-align: center;
 }
@@ -176,12 +187,9 @@ body{
 }
 
 .badge-container{
-    display: flex;
     width: 28rem;
     height: 9rem;
-    align-content: center;
-    justify-content: center;
-}
+    }
 
 .badge-image{
     width: 7rem;
@@ -218,7 +226,6 @@ body{
     display: flex;
     margin: -4rem auto;
     justify-content: center;
-    width: 50vw;
     height: 85vh;
 }
 
@@ -229,7 +236,6 @@ body{
 
 .margin{
     margin: 2rem;
-    margin-top: 2rem;
     align-self: center;
 }
 
