--- a/templates/correct.html
+++ b/templates/correct.html
@@ -14,7 +14,7 @@
    <img src="../static/images/logo%20ho.webp" class="logo">
     <div class="popup-container">
         <h2 class="title green">CORRECT!</h2>
-        <p class="text">Thank you Agent {{name}} for saving {{country}}!<br><br>
+        <p class="text medium">Thank you Agent {{name}} for saving {{country}}!<br><br>
             Now you have {{times}} chances to fail<br>
             to fail with {{fail-times}} more missions to catch the criminal.
         </p>
@@ -29,24 +29,18 @@
                     <img class='ricina-img' src="../static/images/ricina%20fill.png" >
                 </div>
             </div>
-            <div class="container container-to-win">
+            <div class="flex-container-center container container-to-win">
                 <span class="numbers-to-win">4</span>
                 <p class="missions-to-win"> misions to win</p>
             </div>
-            <div class="container container-location">
+            <div class="flex-container-center container container-location">
                 <p class="text-location">You are now in:</p>
                 <p >{{country}}</p>
             </div>
         </div>
     </div>
-
-
    <form action="#" >
-            <input class="button" type="button" value="NEXT MISSION" onclick="nextMission()">
+            <input class="button flex-container-center" type="button" value="NEXT MISSION" onclick="nextMission()">
    </form>
-
-
-
-
 </body>
 </html>
