--- a/templates/exit.html
+++ b/templates/exit.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <img src="../static/images/logo%20ho.webp" class="logo">
-    <div class="popup-container flex-container-center">
+    <div class="flex-container-center popup-container">
         <p class="title bordeaux">Exit?</p>
-        <p class="text">Do you really want to exit <br>the R-Code project?</p>
+        <p class="text medium">Do you really want to exit <br>the R-Code project?</p>
         <form class="flex-container-center" action="#" >
             <input class="exit-button exit-bordeaux-border" type="button" value="QUIT" onclick="quitClick()">
             <input class="exit-green-border exit-button" type="button" value="BACK TO MISSION" onclick="backToMission()">
