--- a/templates/intro.html
+++ b/templates/intro.html
@@ -17,7 +17,7 @@
         </iframe>
     </div>
     <div class="button-space">
-        <button id="how-to-play">HOW TO PLAY</button>
+        <button id="how-to-play" type="button onclick="location.href='howto.html'">HOW TO PLAY</button>
         <button id ="skip" type="button" onclick="location.href='mission-file.html'">SKIP</button>
     </div>
 
