--- a/static/index.css
+++ b/static/index.css
@@ -54,9 +54,10 @@ body{
 }
 
 .button {
+    display: flex;
     height: 4rem;
     border: none;
-    margin: 0 auto;
+    margin: auto;
     width: 18rem;
     flex-wrap: wrap;
     cursor: pointer;
