--- a/templates/gameOver.html
+++ b/templates/gameOver.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="../static/countries.js" defer></script>
-    <link rel="stylesheet" href="../static/index.css">
+    <script src="../static/js/countries.js" defer></script>
+    <link rel="stylesheet" href="../static/css/index.css">
     <link rel="stylesheet" type="text/css" href="../static/css/win.css">
     <title>R-Code Project</title>
 </head>
