--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -8,7 +8,6 @@
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@300&family=Life+Savers:wght@400;700&family=Maitree:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../static/css/dashboard.css">
     <link rel="stylesheet" href="../static/css/index.css">
-    <script src="/static/script/js/dashboard_script.js" defer></script>
     <title>R-code Project</title>
 </head>
 <body>
@@ -57,9 +56,9 @@
                 <span class="numbers-to-win">4</span>
                 <p class="missions-to-win"> misions to win</p>
         </div>
-        <button class="exit-button exit-bordeaux-border dashboard-button" id="howtoplay">HOW TO PLAY</button>
-        <button class="exit-button exit-bordeaux-border dashboard-button" id="showcountries">SHOW ALL COUNTRIES</button>
-        <button class="exit-button exit-bordeaux-border dashboard-button" id="exit">EXIT</button>
+        <button class="exit-button exit-bordeaux-border dashboard-button" id="howtoplay" onclick="location.href='howto'">HOW TO PLAY</button>
+        <button class="exit-button exit-bordeaux-border dashboard-button" id="showcountries" onclick="location.href='countries'">SHOW ALL COUNTRIES</button>
+        <button class="exit-button exit-bordeaux-border dashboard-button" id="exit" onclick="location.href='exit'">EXIT</button>
 </footer>
 </body>
 </html>
