--- a/templates/gameOver.html
+++ b/templates/gameOver.html
@@ -32,7 +32,7 @@
     </div>
 
    <form action="#" >
-       <input class="flex-container-center button" type="button" value="PLAY AGAIN" onclick="nextMission()">
+       <input class="flex-container-center button" type="button" value="PLAY AGAIN" onclick="">
    </form>
 </body>
 </html>
