--- a/templates/win.html
+++ b/templates/win.html
@@ -30,7 +30,7 @@
     </div>
 
    <form class="flex-container-center" action="#" >
-       <input class="button" type="button" value="PLAY AGAIN" onclick="nextMission()">
+       <input class="button" type="button" value="PLAY AGAIN" onclick="">
    </form>
 </body>
 </html>
