--- a/templates/start.html
+++ b/templates/start.html
@@ -10,6 +10,6 @@
 
 <body class="start-div">
         <img class="big-logo" src="/static/images/logo%20ver%20wh.webp" alt="Logo">
-        <button class="button" onclick="location.href='http://127.0.0.1:5000/detective_name'">START</button>
+        <button class="button" onclick="location.href='detective_name'">START</button>
 </body>
 </html>
