--- a/templates/country.html
+++ b/templates/country.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Leaflet Map</title>
+    <title>R-code Project</title>
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
-    <link rel="stylesheet" href="../static/countries.css">
-    </head>
+    <link rel="stylesheet" href="../static/css/countries.css">
+</head>
 <body>
-    <img src="../static/images/logo%20ho.webp" class="logo">
+    <img src="../static/images/logo%20ho.webp" class="logo" alt="logo">
     <div id="map" class="map"></div>
     <button class="button flex-container-center" onclick="location">RETURN</button>
     <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
