--- a/templates/detective_name.html
+++ b/templates/detective_name.html
@@ -10,9 +10,9 @@
 <body class="enter-name-body">
     <img src="../static/images/logo ho.webp" class="logo logo-enter-name">
     <p class="enter-name-text medium">Welcome, agent. To unlock the classified files, please state your code name.</p>
-    <form action="/set_name" class="enter-name-div" method="POST">
+    <form action="/set_name" class="enter-name-div detective_name_button" method="POST">
         <input class="input" type="text" name="name" placeholder="Enter your name...">
-        <input class="button" type="submit" value="OK">
+        <input class="button flex-container-center detective_name_button" type="submit" value="OK">
     </form>
 </body>
 </html>
