--- a/static/css/countries.css
+++ b/static/css/countries.css
@@ -19,6 +19,12 @@ body{
     min-height: 100vh;
 }
 
+.flex-container-center{
+    display: flex;
+    align-content: center;
+    justify-content: center;
+}
+
 .logo{
     margin: 2rem;
     height: 5rem;
