--- a/templates/intro.html
+++ b/templates/intro.html
@@ -8,13 +8,11 @@
     <title>R-code Project</title>
 </head>
 <body>
-    <div class="video">
-        <iframe width="1850" height="760"
-                src="https://www.youtube.com/embed/R54DFTXVAoM?si=zww7CICzCl9Z26Mm/autoplay=1"
-                title="YouTube video player"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
-        </iframe>
-    </div>
+    <iframe class="video"
+            src="https://www.youtube.com/embed/R54DFTXVAoM?si=zww7CICzCl9Z26Mm/autoplay=1"
+            title="YouTube video player"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
+    </iframe>
     <div class="button-space">
         <button id="how-to-play" class="exit-button exit-bordeaux-border" type="button" onclick="location.href='howto'">HOW TO PLAY</button>
         <button id ="skip" class="exit-button exit-bordeaux-border" type="button" onclick="location.href='file'">SKIP</button>
