--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@300&family=Life+Savers:wght@400;700&family=Maitree:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../static/css/dashboard.css">
     <link rel="stylesheet" href="../static/css/index.css">
+    <script src="../static/js/dashboard.js" defer></script>
     <title>R-code Project</title>
 </head>
 <body>
@@ -45,11 +46,7 @@
         <div class="container-ricina">
             <p class="small">Ricina Status:</p>
             <div class="ricina-images">
-                <img class='ricina-img' src="../static/images/ricina%20fill.png" >
-                <img class='ricina-img' src="../static/images/ricina%20fill.png" >
-                <img class='ricina-img' src="../static/images/ricina%20fill.png" >
-                <img class='ricina-img' src="../static/images/ricina%20fill.png" >
-                <img class='ricina-img' src="../static/images/ricina%20fill.png" >
+
             </div>
         </div>
         <div class="flex-container-center container container-to-win">
