--- a/templates/mission-file.html
+++ b/templates/mission-file.html
@@ -14,7 +14,7 @@
     </div>
     <div class="mission-file">
         <img id="file-nor" src="/static/images/file.webp" alt="mission file">
-        <img id="file-hover" src="/static/images/file%20hover.webp" alt="mission file hover">
+        <a href="{{ url_dashboard }}"><img id="file-hover" src="/static/images/file%20hover.webp" alt="mission file hover"></a>
     </div>
 </body>
 </html>
