--- a/templates/intro.html
+++ b/templates/intro.html
@@ -3,22 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <title>R-Code Project Game</title>
-    <link rel="stylesheet" href="/static/intro.css">
+    <link rel="stylesheet" href="../static/intro.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&family=Lato&family=Quicksand&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="vdo-space">
-        <iframe width="1850" height="760"
+        <iframe width="1420" height="580"
                 src="https://www.youtube.com/embed/R54DFTXVAoM?si=zww7CICzCl9Z26Mm/autoplay=1"
                 title="YouTube video player"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
         </iframe>
     </div>
     <div class="button-space">
-        <button id="how-to-play">HOW TO PLAY</button>
-        <button id ="skip" type="button" onclick="location.href='mission-file.html'">SKIP</button>
+        <a href="{{ url_howtoplay }}"><button id="how-to-play">HOW TO PLAY</button></a>
+        <button id ="skip" type="button" onclick="location.href='{{ url_mission_file }}'">SKIP</button>
     </div>
 
 </body>
