--- a/templates/detective_name.html
+++ b/templates/detective_name.html
@@ -2,19 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@300&family=Life+Savers:wght@400;700&family=Maitree:wght@300&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../static/countries.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"><link rel="stylesheet" href="../static/css/enter-name.css">
+    <link rel="stylesheet" href="../static/css/index.css">
     <title>R-code Project</title>
+    <meta charset="UTF-8">
 </head>
 <body class="enter-name-body">
-    <img src="../static/images/logo ho.webp" class="logo">
-    <p class="enter-name-text">Welcome, agent. To unlock the classified files, please state your code name.</p>
-    <form action="/set_name" class="enter-name-div" method="POST">
-        <input class="enter-name-input" type="text" name="name" placeholder="Enter your name...">
-        <input class="enter-name-submit" type="submit" value="OK">
+    <img src="../static/images/logo ho.webp" class="logo logo-enter-name">
+    <p class="enter-name-text medium">Welcome, agent. To unlock the classified files, please state your code name.</p>
+    <form action="/set_name" class="enter-name-div detective_name_button" method="POST">
+        <input class="input" type="text" name="name" placeholder="Enter your name...">
+        <input class="button flex-container-center detective_name_button" type="submit" value="OK">
     </form>
 </body>
 </html>
