--- a/templates/howto.html
+++ b/templates/howto.html
@@ -32,6 +32,6 @@
             <p class="howto-p">Of course, you have the right to exit the task at any time, and the button of <span style="color: red; font-weight: bold">Exit</span> on the lower right can help you. But we hope you can persist to the end, catch the criminals and stop the spread of Ricina.GOOD LUCK!!</p>
         </div>
     </div>
-    <button type="submit" class="button">OK</button>
+    <a href="{{ url_dashboard }}"><button type="submit" class="button">OK</button></a>
 </body>
 </html>
