--- a/templates/win.html
+++ b/templates/win.html
@@ -27,7 +27,7 @@
     </div>
 
     <div class="again">
-            <form action="#" >
+            <form action="{{ url_dashboard }}" >
             <input type="button" value="PLAY AGAIN">
             </form>
     </div>
