--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@300&family=Life+Savers:wght@400;700&family=Maitree:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../static/css/dashboard.css">
     <link rel="stylesheet" href="../static/css/index.css">
-    <script src="../static/js/dashboard.js" defer></script>
+    <script src="../static/js/script.js" defer></script>
     <title>R-code Project</title>
 </head>
 <body>
@@ -18,8 +18,8 @@
         <section class="flex-container-center container badge-container margin">
             <img src="../static/images/badge%20icon.webp" class="badge-image">
             <div class="text-badge">
-                <p>Agent: {{name}}</p>
-                <p>Agent number: {{number}}</p>
+                <p>Agent: <span class="player_name">{{name}}</span></p>
+                <p>Agent number: <span class="player_id">{{number}}</span></p>
             </div>
         </section>
         <section class="flex-container-center container badge-container margin">
@@ -27,7 +27,7 @@
                 <p class="text-location">You are now in:</p>
                 <div class="flex-container-center">
                     <img class="location-image" src="/static/images/location%20icon.webp" alt="An map pin icon">
-                    <p class="flex-end">{{country}}</p>
+                    <p class="flex-end"><span class="player_location">{{country}}</span></p>
                 </div>
             </div>
         </section>
@@ -50,7 +50,7 @@
             </div>
         </div>
         <div class="flex-container-center container container-to-win">
-                <span class="numbers-to-win">4</span>
+                <span class="numbers-to-win"></span>
                 <p class="missions-to-win"> misions to win</p>
         </div>
         <button class="exit-button exit-bordeaux-border dashboard-button" id="howtoplay" onclick="location.href='howto'">HOW TO PLAY</button>
