--- a/templates/correct.html
+++ b/templates/correct.html
@@ -12,7 +12,7 @@
    <img src="../static/images/logo%20ho.webp" class="logo">
     <div class="popup-container">
         <h2 class="title green">CORRECT!</h2>
-        <p class="text medium">Thank you Agent <span class="player_name">{{name}}</span> for saving <span class="player_location">{{country}}</span>!<br><br>
+        <p class="text medium">Thank you Agent <span class="player_name">{{name}}</span> (Code No.<span class="player_id">{{number}}</span>) for saving <span class="player_location">{{country}}</span>!<br><br>
             Now you have <span class="left_life">{{life}}</span> chances to fail<br>
             with <span class="mission_left">{{missionLeft}}</span> more missions to catch the criminal.
         </p>
@@ -36,6 +36,5 @@
    <form action="#" >
             <input class="button flex-container-center" type="button" value="NEXT MISSION" onclick="location.href='dashboard'">
    </form>
-
 </body>
 </html>
