--- a/templates/incorrect.html
+++ b/templates/incorrect.html
@@ -11,7 +11,7 @@
    <img src="../static/images/logo%20ho.webp" class="logo">
     <div class="popup-container">
         <h2 class="title bordeaux">INCORRECT!</h2>
-        <p class="text medium">Sorry Agent <span class="player_name">{{name}}</span>, your answer is not correct.<br><br>
+        <p class="text medium">Sorry Agent <span class="player_name">{{name}}</span> (Code No.<span class="player_id">{{number}}</span>), your answer is not correct.<br><br>
             Now you have <span class="left_life">{{life}}</span> chances to fail<br>
             with <span class="mission_left">{{missionLeft}}</span> more missions to catch the criminal.
         </p>
